Fills in consent, questions, title, key

--- a/app/minimal.cfg
+++ b/app/minimal.cfg
@@ -4,8 +4,8 @@ SQLALCHEMY_DATABASE_URI = 'sqlite:///example.db'
 # Application Settings
 SECRET_KEY = 'You Should Really Change This to Something Unique'  # The secret key MUST be unique.
 APPLICATION_ROOT = ''
-TITLE = 'Example'
-ADMIN_PASSWORD = 'example'
+TITLE = 'Novice to Expert Questionnaire'
+ADMIN_PASSWORD = 'expert'
 
 # Preferences
 USE_BREADCRUMBS = True
@@ -14,11 +14,81 @@ USE_BREADCRUMBS = True
 # Each entry must contain a user-friendly name and a unique path
 PAGE_LIST = [
     {'name': 'Consent', 'path': 'consent'},
-    {'name': 'Questionnaire', 'path': 'questionnaire/example/first'},
-    {'name': 'Questionnaire', 'path': 'questionnaire/example/second'},
+    {'name': 'Questionnaire', 'path': 'questionnaire/questionnaire'},
     {'name': 'End', 'path': 'end'}
 ]
 
 # Hint: use """ for multi-line text.
-CONSENT_TEXT = "Do you give your consent?"
+CONSENT_TEXT = """
+<div>
+    <h3>Consent Form</h3>
+    <p><b>Title: Novice to Expert Questionnaire</b> </p>
+    <p><b>Researcher(s):</b> </p>
+    <ul>
+        <li>Katherine Jackson, Researcher, University of Saskatchewan, <a
+                href="mailto:kmj908@usask.ca">kmj908@usask.ca</a></li>
+        <li>Dr. Carl Gutwin, Supervisor, University of Saskatchewan, <a
+                href="mailto:gutwin@cs.usask.ca">gutwin@cs.usask.ca</a></li>
+    </ul>
+    <p><b>Purpose and Objective of the Research:</b> This is a short survey designed to gather information on 
+    how users learn experrt techniques</p>
+
+    <p><b>Confidentiality:</b>
+    <ul>
+        <li>Confidentiality will be maintained throughout the study, and all data gathered during the study will be
+            anonymized. Any identifying information such as MTurk ID number will be stored separately from the data.
+            Data will only be presented in the aggregate and any individual user comments will be anonymized prior to
+            presentation in academic venues.</li>
+        <li>Only the researchers listed above will have access to the data.</li>
+        <li><b>Storage of Data</b></br>
+            <ul>
+                <li>Data (including survey and interview responses, logs of computer use) will be stored on a secure
+                    password-protected server for 5 years after data collection.</li>
+                <li>After 5 years, the data will be destroyed. All digital data will be wiped from hard disks beyond any
+                    possibility for data recovery.</li>
+            </ul>
+        </li>
+    </ul>
+    </p>
+    <p><b>Right to Withdraw:</b>
+    <ul>
+        <li>Your participation is voluntary. You may withdraw from the research project for any reason, at any time
+            without explanation.</li>
+        <li>Deciding to withdraw from the study will not affect your status or standing (including ratings on any online
+            services such as MTurk).</li>
+        <li>Should you wish to withdraw, you may do so at any point, and we will not use your data; we will destroy all
+            records of your data.</li>
+        <li>Withdrawal requests can be made by contacting us through the Mechanical Turk website.</li>
+        <li>Your right to withdraw data from the study will apply until the data have been aggregated (one week after
+            study completion). After this date, it is possible that some form of research dissemination will have
+            already occurred and it may not be possible to withdraw your data.</li>
+    </ul>
+    </p>
+        <b>Questions or Concerns: </b>
+    <ul>
+        <li>Contact the researcher(s) using the information at the top of the form.</li>
+        <li>This research project has been approved on ethical grounds by the
+            University of Saskatchewan Research Ethics Board.
+            Any questions regarding your rights as a participant may
+            be addressed to that committee through the Research
+            Ethics Office <a href="mailto:ethics.office@usask.ca">ethics.office@usask.ca</a> Toll-free number: (888)
+            966-2975.</li>
+    </ul>
+    </p>
+    <p>
+        <b>Copies:</b>
+    <ul>
+        <li>If you would like to keep a copy of this consent form for your records, simply right-click this web page,
+            click "Save Page As..." and follow the prompts provided by your web browser.</li>
+    </ul>
+    <p>
+        <b>By clicking the consent button below, you are indicating that you...</b>
+    <ul>
+        <li>Have read and understand the description provided.</li>
+        <li>Consent to participate in the research project. </li>
+        <li>Understand that a copy of this Consent Form is available to you for your records.</li>
+    </ul>
+    </p>
+</div>
+"""
 
