--- a/app/minimal.cfg
+++ b/app/minimal.cfg
@@ -2,7 +2,7 @@
 SQLALCHEMY_DATABASE_URI = 'sqlite:///example.db'
 
 # Application Settings
-SECRET_KEY = 'You Should Really Change This to Something Unique'  # The secret key MUST be unique.
+SECRET_KEY = 'expert'  # The secret key MUST be unique.
 APPLICATION_ROOT = ''
 TITLE = 'Novice to Expert Questionnaire'
 ADMIN_PASSWORD = 'expert'
