Changes many of the questions; adds in explanation page

--- a/app/minimal.cfg
+++ b/app/minimal.cfg
@@ -15,16 +15,17 @@ USE_BREADCRUMBS = True
 PAGE_LIST = [
     {'name': 'Consent', 'path': 'consent'},
     {'name': 'Questionnaire', 'path': 'questionnaire/background'},
+    {'name': 'Questionnaire', 'path': 'questionnaire/explanation'},
     {'name': 'Questionnaire', 'path': 'questionnaire/intermodal'},
     {'name': 'Questionnaire', 'path': 'questionnaire/vocabExtension'},
     {'name': 'End', 'path': 'end'}
 ]
 
-# Hint: use """ for multi-line text.
+# Hint: use """ for multi-line text.s
 CONSENT_TEXT = """
 <div>
     <h3>Consent Form</h3>
-    <p><b>Title: Novice to Expert Questionnaire</b> </p>
+    <p><b>Title: Learning New Capabilities in Software Applications</b> </p>
     <p><b>Researcher(s):</b> </p>
     <ul>
         <li>Katherine Jackson, Researcher, University of Saskatchewan, <a
@@ -32,8 +33,7 @@ CONSENT_TEXT = """
         <li>Dr. Carl Gutwin, Supervisor, University of Saskatchewan, <a
                 href="mailto:gutwin@cs.usask.ca">gutwin@cs.usask.ca</a></li>
     </ul>
-    <p><b>Purpose and Objective of the Research:</b> This is a short survey designed to gather information on 
-    how users learn experrt techniques</p>
+    <p><b>Purpose and Objective of the Research:</b> This is a short survey designed to gather information on how users learn new features in software applications</p>
 
     <p><b>Confidentiality:</b>
     <ul>
