--- a/app/minimal_mturk.cfg
+++ b/app/minimal_mturk.cfg
@@ -14,6 +14,7 @@ USE_BREADCRUMBS = True
 # Each entry must contain a user-friendly name and a unique path
 PAGE_LIST = [
     {'name': 'Consent', 'path': 'consent'},
+    {'name': 'MTurk ID', 'path': 'startMTurk'},
     {'name': 'Questionnaire', 'path': 'questionnaire/background'},
     {'name': 'Questionnaire', 'path': 'questionnaire/explanation'},
     {'name': 'Questionnaire', 'path': 'questionnaire/intermodal'},
