Adds prolific version of survey

--- a/app/minimal_prolific.cfg
+++ b/app/minimal_prolific.cfg
@@ -14,11 +14,12 @@ USE_BREADCRUMBS = True
 # Each entry must contain a user-friendly name and a unique path
 PAGE_LIST = [
     {'name': 'Consent', 'path': 'consent'},
+    {'name': 'Prolific', 'path': 'questionnaire/prolificStart'},
     {'name': 'Questionnaire', 'path': 'questionnaire/background'},
     {'name': 'Questionnaire', 'path': 'questionnaire/explanation'},
     {'name': 'Questionnaire', 'path': 'questionnaire/vocabExtension'},
     {'name': 'Questionnaire', 'path': 'questionnaire/intermodal'},
-    {'name': 'End', 'path': 'end'}
+    {'name': 'End', 'path': 'questionnaire/prolificEnd'}
 ]
 
 # Hint: use """ for multi-line text.s
@@ -38,7 +39,7 @@ CONSENT_TEXT = """
     <p><b>Confidentiality:</b>
     <ul>
         <li>Confidentiality will be maintained throughout the study, and all data gathered during the study will be
-            anonymized. Any identifying information will be stored separately from the data.
+            anonymized. Any identifying information such as Prolific ID number will be stored separately from the data.
             Data will only be presented in the aggregate and any individual user comments will be anonymized prior to
             presentation in academic venues.</li>
         <li>Only the researchers listed above will have access to the data.</li>
@@ -56,6 +57,8 @@ CONSENT_TEXT = """
     <ul>
         <li>Your participation is voluntary. You may withdraw from the research project for any reason, at any time
             without explanation.</li>
+        <li>Deciding to withdraw from the study will not affect your status or standing (including ratings on any online
+            services such as Prolific).</li>
         <li>Should you wish to withdraw, you may do so at any point, and we will not use your data; we will destroy all
             records of your data.</li>
         <li>Your right to withdraw data from the study will apply until the data have been aggregated (one week after
