Adds end page to prolific to avoid server error

--- a/app/minimal_prolific.cfg
+++ b/app/minimal_prolific.cfg
@@ -19,7 +19,8 @@ PAGE_LIST = [
     {'name': 'Questionnaire', 'path': 'questionnaire/explanation'},
     {'name': 'Questionnaire', 'path': 'questionnaire/vocabExtension'},
     {'name': 'Questionnaire', 'path': 'questionnaire/intermodal'},
-    {'name': 'End', 'path': 'questionnaire/prolificEnd'}
+    {'name': 'Code', 'path': 'questionnaire/prolificEnd'},
+    {'name': 'End', 'path': 'end'}
 ]
 
 # Hint: use """ for multi-line text.s
